--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-TODO:
+﻿TODO:
 	1)Классы игрокам
 	Медик Инженер Берсерк Стрелок
 	Медик - лучше всех лечит, только ему можно купить специальную аптечку, которая лучше обычной. И в начале игры дается аптечка
